191
This hasn't been crashing since the days of 2.6, but it has been entering an infinite loop trying to report the error.  I'm not sure what the error reporting code was trying to accomplish, but it was surely going to loop in this case.  As of r17100 the test code reports
{code}
test.scala:5: error: overloaded method value a with alternatives => (C.this.A) => Unit <and> => () => Unit does not take type parameters
  a[A]
  ^
test.scala:4: error: method a is defined twice
  def a = (p:A) => ()
      ^
two errors found
{code}
...which looks good to me, so I am closing.
